Added ability to delete character

--- a/cmd/web/templates/charactertemplate.templ
+++ b/cmd/web/templates/charactertemplate.templ
@@ -99,6 +99,9 @@ xpAwards []db.XpAward) {
                     </div>
                 </div>
             </div>
+            <hr>
+            <a class="btn btn-primary" href={ templ.SafeURL("/deletecharacter/" + strconv.Itoa(int(character.ID)))
+                }>Delete</a>
         </div>
     </div>
 
