--- a/cmd/web/templates/campaignstemplate.templ
+++ b/cmd/web/templates/campaignstemplate.templ
@@ -6,7 +6,7 @@ import (
 "github.com/hculpan/osetools/internal/db"
 )
 
-templ CampaignsTemplate(appTitle string, username string, campaigns []db.GetCampaignsWithCharacterCountRow) {
+templ CampaignsTemplate(appTitle string, username string, campaigns []db.GetCampaignsWithCharacterCountRow, authorized bool) {
 <!DOCTYPE html>
 <html lang="en">
 
@@ -14,7 +14,7 @@ templ CampaignsTemplate(appTitle string, username string, campaigns []db.GetCamp
 
 <body>
     <div class="d-flex" style="min-height: 100vh;">
-        @components.Sidebar("Campaigns", username, false)
+        @components.Sidebar("Campaigns", username, authorized)
         <div class="container mt-5">
             <h1>Campaigns</h1>
             <table class="table table-dark table-striped">
@@ -35,6 +35,7 @@ templ CampaignsTemplate(appTitle string, username string, campaigns []db.GetCamp
                     }
                 </tbody>
             </table>
+            <a class="btn btn-primary" href="/add-campaign">New Campaign</a>
         </div>
     </div>
 </body>
