Completed move to MariaDB; dropped sidebar

--- a/cmd/web/templates/campaignstemplate.templ
+++ b/cmd/web/templates/campaignstemplate.templ
@@ -28,14 +28,16 @@ templ CampaignsTemplate(appTitle string, username string, campaigns []db.GetCamp
                 <tbody>
                     for _, c := range campaigns {
                     <tr>
-                        <td><a href={ templ.SafeURL("/characters/" + strconv.Itoa(int(c.ID.(int64)))) }>{ c.Name }</a></td>
+                        <td><a href={ templ.SafeURL("/characters/" + strconv.Itoa(int(c.ID))) }>{ c.Name }</a></td>
                         <td>{ c.Description.String }</td>
                         <td class=" text-center">{ strconv.Itoa(int(c.CharacterCount)) }</td>
                     </tr>
                     }
                 </tbody>
             </table>
-            <a class="btn btn-primary" href="/add-campaign">New Campaign</a>
+            if authorized {
+                <a class="btn btn-primary" href="/add-campaign">New Campaign</a>
+            }
         </div>
     </div>
 </body>
