--- a/cmd/web/templates/characterstemplate.templ
+++ b/cmd/web/templates/characterstemplate.templ
@@ -8,7 +8,7 @@ import (
 )
 
 templ XpTemplate(appTitle string, username string, campaignId int, campaignName string,
-characters []db.GetCharactersForCampaignWithXpRow,
+characters []db.Character,
 authorized bool,
 msg string) {
 <!DOCTYPE html>
@@ -40,14 +40,10 @@ msg string) {
                     </tr>
                     for _, c := range characters {
                     <tr>
-                        <td><a href={ templ.SafeURL("/character/" + strconv.Itoa(int(c.ID.(int64)))) }>{ c.Name }</a></td>
+                        <td><a href={ templ.SafeURL("/character/" + strconv.Itoa(int(c.ID))) }>{ c.Name }</a></td>
                         <td>{ c.PlayerName }</td>
                         <td class=" text-center">{ utils.FormatInt(int(c.XpBonus)) }%</td>
-                        if c.TotalXp.Valid {
-                        <td class=" text-center">{ utils.FormatInt(int(c.TotalXp.Float64)) }</td>
-                        } else {
-                        <td class=" text-center">Unknown</td>
-                        }
+                        <td class=" text-center">{ utils.FormatInt(int(c.TotalXp)) }</td>
                     </tr>
                     }
                 </tbody>
