Fixed a bug where adding xp didn't update total; now supports retainers; can mark/unmark dead characters

--- a/cmd/web/templates/addcharacterform.templ
+++ b/cmd/web/templates/addcharacterform.templ
@@ -38,6 +38,10 @@ authorized bool ) {
                     <input type="text" class="form-control" id="playerName" name="playerName" required>
                 </div>
                 <div class="mb-3">
+                    <label for="retainer" class="form-label">Retainer</label>
+                    <input type="checkbox" class="form-check-input" id="retainer" name="retainer" value="1">
+                </div>
+                <div class="mb-3">
                     <label for="totalXp" class="form-label">Starting XP</label>
                     <input type="number" class="form-control" style="max-width: 200px;" id="totalXp" name="totalXp"
                         value="0" required>
